# kategorize

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: kmodes_bench.rs  kprototypes_bench.rs
examples/: advanced_usage.rs  basic_kmodes.rs  jaccard_distance.rs  kprototypes_mixed_data.rs
src/: distance.rs  error.rs  initialization.rs  kmodes.rs  kprototypes.rs  lib.rs  utils.rs
tests/: debug_test.rs  integration_tests.rs
