[package]
name = "kategorize"
version = "0.2.0"
edition = "2021"
authors = ["Ethan Wu <ethqnol@gmail.com>"]
license = "MIT"
description = "K-modes and K-prototypes clustering algorithms for categorical and mixed data"
repository = "https://github.com/ethqnol/kategorize"
keywords = ["clustering", "machine-learning", "categorical-data", "k-modes", "k-prototypes"]
categories = ["algorithms", "science"]
readme = "README.md"

[dependencies]
ndarray = "0.15"
rand = "0.8"
rayon = "1.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
approx = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"

[features]
default = ["serde"]
serde = ["dep:serde", "ndarray/serde"]
approx = ["dep:approx"]

[[bench]]
name = "kmodes_bench"
harness = false

[[bench]]
name = "kprototypes_bench"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
